# hungarian_munkres_cpp

./: .gitignore  CMakeLists.txt  build.sh  check_algorithm_valid.py  readme.md
include/: hungarian.h
src/: hungarian.cc  main.cc
